--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
             - type: "bind"
               source: "${LOGSTASH_PLUGIN_HOME:-./mounts/logstash-plugin}"
               target: "/home/logstash-plugin"
+            - type: "bind"
+              source: "${LOGSTASH_PIPELINE:-./mounts/logstash-pipeline}"
+              target: "/usr/share/logstash/pipeline"
 
 networks:
     default:
