--- a/mounts/logstash/pipeline/idmef/logstash.conf
+++ b/mounts/logstash/pipeline/idmef/logstash.conf
@@ -7,7 +7,7 @@ input {
 output {
   stdout {
     codec => idmef {
-      defaults: true
+      defaults => true
       paths => {
         "alert.classification.text" => "$message"
         "alert.target(0).node.name" => "$host"
