--- a/containers/logstash/Dockerfile
+++ b/containers/logstash/Dockerfile
@@ -1,5 +1,12 @@
 FROM docker.elastic.co/logstash/logstash-oss:7.11.2-amd64
 
+ARG PLUGIN_GEMSPEC
+
+# Install softwares
+USER root
+RUN yum update --assumeyes git ; yum install --assumeyes git
+USER logstash
+
 COPY logstashpath.sh /etc/profile.d
 USER root
 RUN chmod 0644 /etc/profile.d/logstashpath.sh
@@ -11,3 +18,7 @@ USER logstash
 # https://github.com/elastic/logstash/issues/3612
 RUN grep -qs bundler /usr/share/logstash/Gemfile || echo 'gem "bundler"' >> /usr/share/logstash/Gemfile
 RUN PATH=/usr/share/logstash/jdk/bin:/usr/share/logstash/vendor/jruby/bin:/usr/share/logstash/vendor/bundle/jruby/2.5.0/gems/rake-12.3.3/bin:$PATH gem install bundler
+
+# Build plugin
+
+#RUN source /etc/profile.d/logstashpath.sh ; cd /home/logstash-plugin ; gem build $PLUGIN_GEMSPEC
