Re-reorder pipeline configuration

--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -12,7 +12,7 @@ services:
               source: "${NGINX_LOG_DIR:-./mounts/nginx/log}"
               target: "/var/log/nginx"
 
-#networks:
-#    default:
-#        driver: "bridge"
-#        name: "logstash_bridge"
+networks:
+    default:
+        driver: "bridge"
+        name: "logstash_bridge"
