--- a/docker-compose.beats.yml
+++ b/docker-compose.beats.yml
@@ -2,10 +2,11 @@ version: "3.5"
 
 services:
     beats:
-        image: "docker.elastic.co/beats/filebeat:7.12.0"
+        image: "docker.elastic.co/beats/filebeat:8.6.1"
         container_name: "beats"
         restart: "unless-stopped"
-        network_mode: "host"
+        networks:
+            logstash_bridge:
         volumes:
             - type: "bind"
               source: "${NGINX_LOG_DIR:-./mounts/nginx/log}"
@@ -15,7 +16,6 @@ services:
               target: "/usr/share/filebeat/filebeat.yml"
               read_only: true
 
-#networks:
-#    default:
-#        driver: "bridge"
-#        name: "logstash_bridge"
+networks:
+    logstash_bridge:
+        driver: "bridge"
