Fix pipeline configuration; does not work, must fix plugin code

--- a/mounts/logstash/pipeline/beats+idmefv2/logstash.conf
+++ b/mounts/logstash/pipeline/beats+idmefv2/logstash.conf
@@ -6,7 +6,7 @@ input {
 
 output {
   stdout {
-    codec => idmef {
+    codec => idmefv2 {
       defaults => true
       paths => {
         "alert.classification.text" => "$message"
