Remove useless configuration

--- a/mounts/logstash/pipeline/beats+idmefv2/logstash.conf
+++ b/mounts/logstash/pipeline/beats+idmefv2/logstash.conf
@@ -6,13 +6,6 @@ input {
 
 output {
   stdout {
-    codec => idmefv2 {
-      defaults => true
-      paths => {
-        "alert.classification.text" => "$message"
-        "alert.target(0).node.name" => "$host"
-        "alert.analyzer(0).name" => "ACME"
-      }
-    }
+    codec => idmefv2 
   }
 }
