Debug idmefv2 codec

--- a/mounts/logstash/pipeline/httpin+json/logstash.conf
+++ b/mounts/logstash/pipeline/httpin+json/logstash.conf
@@ -1,7 +1,10 @@
 input {
   http {
     port => 9999
-    codec => idmefv2
+    codec => json {
+      ecs_compatibility => v1
+      target => idmefv2
+    }
   }
 }
 
