--- a/mounts/logstash/pipeline/httpin+idmefv2/logstash.conf
+++ b/mounts/logstash/pipeline/httpin+idmefv2/logstash.conf
@@ -1,7 +1,26 @@
 input {
   http {
     port => 9999
-    codec => idmefv2
+    codec => idmefv2 {
+      mapping => {
+        "Version" => "2.0.3"
+        "ID" => "[agent][ephemeral_id]"
+        "CreateTime" => "[@timestamp]"
+        "Analyzer" => {
+            "Name" => "[agent][name]"
+            "Model" => "[agent][type]"
+            "Category" => [
+                "[input][type]"
+            ]
+            "Data" => [
+                "[input][type]"
+            ]
+            "Method" => [
+                "[@metadata][type]"
+            ]
+        }
+      }
+    }
   }
 }
 
