--- a/mounts/logstash/pipeline/beats+idmefv2/logstash.conf
+++ b/mounts/logstash/pipeline/beats+idmefv2/logstash.conf
@@ -6,6 +6,25 @@ input {
 
 output {
   stdout {
-    codec => idmefv2 
+    codec => idmefv2 {
+      mapping => {
+        "Version" => "2.0.3"
+        "ID" => "[agent][ephemeral_id]"
+        "CreateTime" => "[@timestamp]"
+        "Analyzer" => {
+            "Name" => "[agent][name]"
+            "Model" => "[agent][type]"
+            "Category" => [
+                "[input][type]"
+            ]
+            "Data" => [
+                "[input][type]"
+            ]
+            "Method" => [
+                "[@metadata][type]"
+            ]
+        }
+      }
+    }
   }
 }
